feat: let admins select SearchAPI products
